Bug fix around button height and visibility

--- a/image-slider.css
+++ b/image-slider.css
@@ -42,6 +42,7 @@
   top: calc(50% - 0.5em);
   color: #ffffff;
   font-size: 4em;
+  opacity: 0;
 
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'H5PImageSlider' !important;
@@ -85,6 +86,10 @@
 }
 
 .h5p-image-slider-button:hover .h5p-image-slider-button-background {
+  opacity: 1;
+}
+
+.h5p-image-slider-button:hover .h5p-image-slider-button-text {
   opacity: 1;
 }
 
